--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@ permalink: /404.html
 title: "Page not found"
 description: "Looks like there has been a mistake. Nothing exists here."
 redirect: true
+redirect_to: https://manansuri.com/
 ---
 
 <p>You will be redirected to the main page within 3 seconds. If not redirected, please go back to the <a href="{{ site.baseurl }}/">home page</a>.</p>
