--- a/news.html
+++ b/news.html
@@ -1,7 +1,8 @@
 ---
 layout: page
 title: news
-permalink: /news/
+permalink: /news/index.html
+redirect_to: https://manansuri.com/news/
 ---
 
 {% include news.html %}
